feat: Add release command implementation with support for various project types
- Implemented the release command in GitHub Actions to handle versioning and changelog generation for Node.js, Python, Go, and generic projects.
- Added scripts for calculating versions, updating project files, and generating changelogs based on changesets.
- Created test fixtures for various release scenarios including stable releases, prereleases, and graduate commands.
- Introduced a Makefile for running tests on the release command using act.
- Added JSON fixtures for testing release commands with different parameters.

--- a/commands/changeset/test/Makefile
+++ b/commands/changeset/test/Makefile
@@ -7,9 +7,8 @@ RED := \033[0;31m
 NC := \033[0m
 
 # Act common options
-ACT_OPTS := --container-architecture linux/amd64 \
-           -P ubuntu-latest=catthehacker/ubuntu:act-latest \
-           --env GITHUB_TOKEN=fake-token \
+# .actrc will be found automatically from project root
+ACT_OPTS := --env GITHUB_TOKEN=fake-token \
            --no-recurse \
            --rm \
            --dryrun
