fix: 为工作流添加 Git 配置
- 在 release.yml 和 changeset.yml 中添加 Git 用户配置
- 使用 github-actions[bot] 作为提交者
- 解决 'Author identity unknown' 错误

--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -48,6 +48,11 @@ jobs:
           ref: ${{ steps.pr.outputs.branch }}
           fetch-depth: 0
       
+      - name: Configure Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      
       - name: Parse Command
         id: parse
         shell: bash
