--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,8 @@ name: Test Command
 on:
   issue_comment:
     types: [created]
+  pull_request_comment:
+    types: [created]
 
 jobs:
   run-tests:
