--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,16 @@ name: Test Command
 on:
   issue_comment:
     types: [created]
+  pull_request:
+    types: [opened, synchronize, reopened]
   pull_request_comment:
     types: [created]
 
 jobs:
   run-tests:
     if: |
-      startsWith(github.event.comment.body, '/test')
+      github.event_name == 'pull_request' ||
+      (github.event.comment && startsWith(github.event.comment.body, '/test'))
     runs-on: ubuntu-latest
     
     permissions:
@@ -29,16 +32,28 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const comment = context.payload.comment.body.trim();
-            const match = comment.match(/^\/test(?:\s+(unit|integration|e2e|all|coverage))?(?:\s+(.*))?$/);
+            let testType = 'all';
+            let options = '';
             
-            if (!match) {
-              core.setFailed('Invalid command format');
-              return;
+            // 如果是通过评论触发的，解析命令
+            if (context.eventName === 'issue_comment' || context.eventName === 'pull_request_comment') {
+              const comment = context.payload.comment.body.trim();
+              const match = comment.match(/^\/test(?:\s+(unit|integration|e2e|all|coverage))?(?:\s+(.*))?$/);
+              
+              if (!match) {
+                core.setFailed('Invalid command format');
+                return;
+              }
+              
+              testType = match[1] || 'all';
+              options = match[2] || '';
+            } 
+            // 如果是 PR 事件自动触发的，运行所有测试
+            else if (context.eventName === 'pull_request') {
+              console.log('Triggered by pull request event, running all tests');
+              testType = 'all';
+              options = '';
             }
-            
-            const testType = match[1] || 'all';
-            const options = match[2] || '';
             
             core.setOutput('test_type', testType);
             core.setOutput('options', options);
