test: add comprehensive test cases for new workflow commands
- Added tests for /start development mode (basic, with issue, custom branch)
- Added tests for /start release mode (basic, with version, no changesets)
- Added tests for /changeset auto mode (default, explicit, with message)
- Updated test Makefiles to cover all new command variations
- Created test fixtures for different scenarios and edge cases

--- a/commands/changeset/test/Makefile
+++ b/commands/changeset/test/Makefile
@@ -30,13 +30,18 @@ test: test-all ## Run all tests (alias for test-all)
 test-all: check-act ## Run all workflow tests for all project types
 	@echo "$(YELLOW)Testing changeset command for multiple project types$(NC)"
 	@echo ""
-	@echo "$(GREEN)=== Node.js Tests ===$(NC)"
+	@echo "$(GREEN)=== Auto Mode Tests ===$(NC)"
+	@$(MAKE) test-auto-default
+	@echo ""
+	@$(MAKE) test-auto-explicit
+	@echo ""
+	@$(MAKE) test-auto-with-message
+	@echo ""
+	@echo "$(GREEN)=== Manual Mode Tests ===$(NC)"
 	@$(MAKE) test-node
 	@echo ""
-	@echo "$(GREEN)=== Python Tests ===$(NC)"
 	@$(MAKE) test-python
 	@echo ""
-	@echo "$(GREEN)=== Go Tests ===$(NC)"
 	@$(MAKE) test-go
 	@echo ""
 	@echo "$(GREEN)=== Invalid Command Test ===$(NC)"
@@ -65,6 +70,19 @@ test-go: check-act ## Test Go changeset creation
 test-invalid: check-act ## Test invalid command handling
 	@echo "$(YELLOW)Testing invalid command$(NC)"
 	@act issue_comment -e fixtures/pr-comment-invalid.json -W ../changeset.yml $(ACT_OPTS)
+
+# Auto mode tests
+test-auto-default: check-act ## Test default auto mode (/changeset with no args)
+	@echo "$(YELLOW)Testing: /changeset (default auto mode)$(NC)"
+	@act issue_comment -e fixtures/pr-comment-auto-default.json -W ../changeset.yml $(ACT_OPTS)
+
+test-auto-explicit: check-act ## Test explicit auto mode (/changeset --auto)
+	@echo "$(YELLOW)Testing: /changeset --auto$(NC)"
+	@act issue_comment -e fixtures/pr-comment-auto-explicit.json -W ../changeset.yml $(ACT_OPTS)
+
+test-auto-with-message: check-act ## Test auto mode with custom message
+	@echo "$(YELLOW)Testing: /changeset --auto Custom message$(NC)"
+	@act issue_comment -e fixtures/pr-comment-auto-with-message.json -W ../changeset.yml $(ACT_OPTS)
 
 test-patch: test-node ## Test patch command (alias for Node.js test)
 
